fix: login form shifts when "error view" is visible

--- a/java-apps/bank-gateway/src/main/ui/src/components/screens/loginScreen/login.module.css
+++ b/java-apps/bank-gateway/src/main/ui/src/components/screens/loginScreen/login.module.css
@@ -7,6 +7,12 @@
 .containerClassName{
     height: 100vh !important;
 }
+.contentContainer{
+    display: flex;
+    flex-direction: column;
+    min-height: 350px;
+    margin-top: 50px;
+}
 .cardWrapper{
     padding: 0 !important;
     overflow: hidden;
